--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Higher Order Functions</title>
-
-    <!-- JS source file -->
-    <script type="text/javascript" src="main.js"></script>
   </head>
   <body>
-    <h1></h1>
+    <h1>JS Array Methods</h1>
+
+    <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
